--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
-<h1 class="title">Hello Astro</h1>
+---
+import Layout from '../components/Layout.astro';
+---
 
-<style>
-  .title {
-    color: skyblue;
-  }
-</style>
+<Layout pageTitle="Index">
+  <h1 class="title">Hello Astro</h1>
+</Layout>
+
+<!-- min 1,37 -->
